--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,14 @@
   <p-toast position="top-center" key="tc"></p-toast>
   <div class="row justify-content-center mx-0" style="height: 100vh;" *ngIf="!signupWindow">
+    <img src="../../assets/images/warning2.jpg" alt="" *ngIf="warning">
     <div class="col-4 align-self-center justify-content-center">
       <div class="form-group">
-        <div class="mb-2 text-light"><label for="exampleInputEmail1">Email address</label></div>
+        <div class="mb-2"><label for="exampleInputEmail1">Email address</label></div>
         <input type="email" class="form-control" id="exampleInputEmail1" [(ngModel)]="email"
           aria-describedby="emailHelp" placeholder="Enter email">
       </div>
       <div class="form-group ">
-        <div class="mb-2 text-light"> <label for="exampleInputPassword1">Password</label></div>
+        <div class="mb-2"> <label for="exampleInputPassword1">Password</label></div>
         <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="password"
           placeholder="Password">
       </div>
@@ -20,6 +21,7 @@
 
 
   <div class="row justify-content-center mx-0" style="height: 100vh;" *ngIf="signupWindow">
+    <img src="../../assets/images/warning2.jpg" alt="" *ngIf="warning">
     <form class="col-4 align-self-center justify-content-center" [formGroup]="newAccount" (ngSubmit)="newAccountAdd()"
       >
       <div class="form-group">
@@ -43,7 +45,7 @@
           placeholder="Confirm Password">
       </div>
       <!-- <div class="form-group mt-3" *ngIf="warning" >Password not matched</div> -->
-      <div class="d-md-flex justify-content-md-between">
+      <div class="d-md-flex justify-content-md-between mt-3">
         <button class="btn btn-success" [disabled]="!newAccount.valid">Create Account</button>
       </div>
     </form>
