--- a/src/app/trial/trial01/trial01.component.html
+++ b/src/app/trial/trial01/trial01.component.html
@@ -1,7 +1,52 @@
-<div class="container mt-4">
-    <p>Fathers Input</p>
-    <p>{{trial01Data}}</p>
+<div class="container-sm mt-5 ml-5">
+  <form [formGroup]="feedback" (ngSubmit)="feebackLoged()">
 
+    <h5 class="mb-4 text-dark">Feedback is the most effective tool of <strong><em>Improvement</em></strong>.</h5>
 
+    <div class="form-group row">
+      <label for="inputName" class="col-sm-2 col-form-label">Full Name</label>
+      <div class="col-sm-6">
+          <input type="text" class="form-control" id="inputName" formControlName="feName" placeholder="Please Enter Full Name">
+      </div>
+    </div>
+
+    <div class="form-group row mt-3">
+      <label for="inputEmail3" class="col-sm-2 col-form-label" >Email</label>
+      <div class="col-sm-6">
+        <input type="email" class="form-control" id="inputEmail3" formControlName="feEmail" placeholder="Email Adrress">
+      </div>
+    </div>
+
+    <div class="form-group row mt-3">
+      <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Feedback</label>
+      <div class="col-sm-6">
+        <textarea class="form-control" id="exampleFormControlTextarea1" formControlName="feText" rows="5"
+          placeholder="Provide your valuable feedback..."></textarea>
+      </div>
+    </div>
+
+    <fieldset class="form-group mt-3">
+      <div class="row">
+        <legend class="col-form-label col-sm-2 pt-0">Type of Feedback</legend>
+        <div class="col-sm-6">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" id="gridRadios1" formControlName="feTypeOf" value="suggestion" checked>
+            <label class="form-check-label" for="gridRadios1">Suggestion</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" id="gridRadios2" formControlName="feTypeOf" value="complaint">
+            <label class="form-check-label" for="gridRadios2">Complaint</label>
+          </div>
+        </div>
+      </div>
+    </fieldset>
+
+    <div class="row mt-3">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-6">
+        <button class="btn btn-warning" type="submit" [disabled]="!feedback.valid">Submit</button>
+      </div>
+    </div>
+
+  </form>
 </div>
-    
