--- a/src/app/trial/trial02/trial02.component.html
+++ b/src/app/trial/trial02/trial02.component.html
@@ -1,10 +1,74 @@
-<div class="container mt-4">
-    <div>Find the area of "CIRCLE"</div>
-    <div>
-        <label for="radius">Enter Radius:</label>
-        <input type="text" class="form-control" id="msg" [(ngModel)]="msgNew" aria-describedby="msg"
-            placeholder="Please Enter msg">
+
+<div class="container mt-5">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Email Address</th>
+        <th scope="col">Feedback Type</th>
+        <th scope="col">Feedback</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of childFeebackList">
+        <td>{{item.feName}}</td>
+        <td>{{item.feEmail}}</td>
+        <td>{{item.feTypeOf}}</td>
+        <td>{{item.feText}}</td>
+        <td><button (click)="takeAction(item.feId)">Action</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="actionPop row" *ngIf="actionWindow">
+  <div class="mt-3 row">
+    <div class="col-4">Name :</div>
+    <div class="col-6">{{childFeebackList[index].feName}}</div>
+  </div>
+  <div class="mt-3 row">
+    <div class="col-4">Email :</div>
+    <div class="col-6">{{childFeebackList[index].feEmail}}</div>
+  </div>
+  <div class="mt-3 row">
+    <div class="col-4">Type :</div>
+    <div class="col-6">{{childFeebackList[index].feTypeOf}}</div>
+  </div>
+  <div class="mt-3 row">
+    <div class="col-4">Feedback :</div>
+    <div class="col-6">{{childFeebackList[index].feText}}</div>
+  </div>
+  <div class="mt-3 row">
+    <div class="col-4">Solution :</div>
+    <div class="col-8">
+      <textarea class="form-control" type="text" [(ngModel)]="responce"></textarea>
     </div>
-    <button (click)= "sendMsg()">Calculate Area</button>
-    <div>{{msg}}</div>
+  </div>
+
+  <div class="row mt-4">
+    <legend class="col-form-label col-4 pt-0">Status</legend>
+    <div class="col-6">
+      <div class="form-check">
+        <input class="form-check-input" type="radio" id="gridRadios1" [(ngModel)]="actionCatagory" value="clear"
+          checked>
+        <label class="form-check-label" for="gridRadios1">Clear</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" id="gridRadios2" [(ngModel)]="actionCatagory" value="hold">
+        <label class="form-check-label" for="gridRadios2">Hold</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" id="gridRadios3" [(ngModel)]="actionCatagory" value="reject">
+        <label class="form-check-label" for="gridRadios3">Reject</label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-4 ml-0"></div>
+    <div class="col-3">
+      <button class="btn btn-warning" (click)="actionTaken()">Submit</button>
+    </div>
+  </div>
 </div>
