feedback module completed

--- a/src/app/trial/trial.component.html
+++ b/src/app/trial/trial.component.html
@@ -1,8 +1,8 @@
 <div class="main-content-box">
-  <div class="row mb-3">
-    <div class="col">Feedback Management</div> 
-    <div class="col">{{feedbackListNumber}}</div>
-    <div class="col"></div>
+  <div class="row mb-3 gx-0">
+    <div class="col-sm-3 px-3"><strong>Feedback Management</strong></div> 
+    <div class="col-sm-3">Total Feedback: <strong> {{feedbackListNumber}}</strong></div>
+    <div class="col-sm-3">Total Resolved: <strong> {{newFeedbackListNumber}}</strong></div>
     <!-- <button (click)="trial()"></button> -->
   </div>
   <!-- <div>Area of Circle = <Span>{{msg}}</Span></div> -->
@@ -11,10 +11,10 @@
       <tab heading="Feedback" id="tab1">
         <app-trial01 (sendFeedbackList)="receiveFeedbackList($event)"></app-trial01>
       </tab>
-      <tab heading="Action">
+      <tab heading="Action" (selectTab)="filterList($event)">
         <app-trial02 [childFeebackList]="feedbackList" (sendChildFeebackList)="receiveNewFeedbackList($event)" ></app-trial02>
       </tab>
-      <tab heading="Status">
+      <tab heading="Status" (selectTab)="changeTab($event)">
         <app-trial03 [finalFeebackList]="newFeedbackList"></app-trial03>
       </tab>
     </tabset>
