--- a/src/app/trial/trial02/trial02.component.html
+++ b/src/app/trial/trial02/trial02.component.html
@@ -11,18 +11,21 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of childFeebackList">
+      <tr *ngFor="let item of displayFeedbackList">
         <td>{{item.feName}}</td>
         <td>{{item.feEmail}}</td>
         <td>{{item.feTypeOf}}</td>
         <td>{{item.feText}}</td>
-        <td><button (click)="takeAction(item.feId)">Action</button></td>
+        <td><button class="btn btn-primary btn-sm" (click)="takeAction(item.feId)">Action</button></td>
       </tr>
     </tbody>
   </table>
 </div>
 
 <div class="actionPop row" *ngIf="actionWindow">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="btn btn-warning" (click)="actionWindow=false"><i class="bi bi-x-lg"></i></button>
+  </div>
   <div class="mt-3 row">
     <div class="col-4">Name :</div>
     <div class="col-6">{{childFeebackList[index].feName}}</div>
@@ -50,8 +53,7 @@
     <legend class="col-form-label col-4 pt-0">Status</legend>
     <div class="col-6">
       <div class="form-check">
-        <input class="form-check-input" type="radio" id="gridRadios1" [(ngModel)]="actionCatagory" value="clear"
-          checked>
+        <input class="form-check-input" type="radio" id="gridRadios1" [(ngModel)]="actionCatagory" value="clear">
         <label class="form-check-label" for="gridRadios1">Clear</label>
       </div>
       <div class="form-check">
