--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,18 @@
   <p-toast position="top-center" key="tc"></p-toast>
   <div class="row justify-content-center mx-0" style="height: 100vh;" *ngIf="!signupWindow">
     <img src="../../assets/images/warning2.jpg" alt="" *ngIf="warning">
-    <div class="col-4 align-self-center justify-content-center">
+    <div class="col-4 align-self-center justify-content-center login">
       <div class="form-group">
-        <div class="mb-2"><label for="exampleInputEmail1">Email address</label></div>
+        <div class="mb-1 text-light"><label for="exampleInputEmail1">Email address</label></div>
         <input type="email" class="form-control" id="exampleInputEmail1" [(ngModel)]="email"
           aria-describedby="emailHelp" placeholder="Enter email">
       </div>
       <div class="form-group ">
-        <div class="mb-2"> <label for="exampleInputPassword1">Password</label></div>
+        <div class="mb-1 text-light mt-3" > <label for="exampleInputPassword1">Password</label></div>
         <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="password"
           placeholder="Password">
       </div>
-      <div class="d-md-flex justify-content-md-between">
+      <div class="d-md-flex justify-content-md-between mt-2">
         <button class="btn btn-primary mt-3" (click)="onLogin()">Login</button>
         <button class="btn btn-warning mt-3" (click)="onSignup()">Sign up</button>
       </div>
@@ -22,31 +22,31 @@
 
   <div class="row justify-content-center mx-0" style="height: 100vh;" *ngIf="signupWindow">
     <img src="../../assets/images/warning2.jpg" alt="" *ngIf="warning">
-    <form class="col-4 align-self-center justify-content-center" [formGroup]="newAccount" (ngSubmit)="newAccountAdd()"
+    <form class="col-4 align-self-center justify-content-center login" [formGroup]="newAccount" (ngSubmit)="newAccountAdd()"
       >
-      <div class="form-group">
+      <div class="form-group text-light">
         <label for="exampleInputUserName">User Name</label>
         <input type="text" class="form-control" id="exampleInputUserName" formControlName="name"
           aria-describedby="emailHelp" placeholder="Enter Your Name">
       </div>
-      <div class="form-group">
+      <div class="form-group text-light mt-3">
         <label for="exampleInputEmail">Email address</label>
         <input type="email"          class="form-control" id="exampleInputEmail" formControlName="email" aria-describedby="emailHelp"
           placeholder="Enter email">
       </div>
-      <div class="form-group mt-3">
+      <div class="form-group text-light mt-3">
         <label for="exampleInputPassword">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword" formControlName="password"
           placeholder="Password">
       </div>
-      <div class="form-group mt-3">
+      <div class="form-group text-light mt-3">
         <label for="exampleConfirmPassword">Confirm Password</label>
         <input type="password" class="form-control" id="exampleConfirmPassword" formControlName="confirmPassword"
           placeholder="Confirm Password">
       </div>
       <!-- <div class="form-group mt-3" *ngIf="warning" >Password not matched</div> -->
-      <div class="d-md-flex justify-content-md-between mt-3">
-        <button class="btn btn-success" [disabled]="!newAccount.valid">Create Account</button>
+      <div class="d-md-flex justify-content-md-between mt-4">
+        <button class="btn btn-primary" [disabled]="!newAccount.valid">Create Account</button>
       </div>
     </form>
   </div>
