--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,6 @@
+.row {
+    background-color: rgb(33, 37, 41);
+}
 .row img {
     margin: 0px;
     padding: 0px;
@@ -6,4 +9,13 @@
     width: 100%;
     height: 100vh;
     mix-blend-mode: multiply;
+}
+.login {
+    border: 1px solid rgb(32, 36, 40, 0.5);
+    border-radius: 20px;
+    padding: 45px;
+    box-shadow: -2px -2px 8px rgba(10, 10, 10, 0.15),
+                -2px -2px 12px rgba(32, 36, 40, 0.15),
+                inset 2px 2px 4px rgba(60, 60, 60, 0.6),
+                2px 2px 8px rgba(80, 80, 90, 0.5);
 }
