console log removed

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -96,3 +96,7 @@ ul li:hover a::after,
   border-radius: 50%;
   box-shadow: 15px 15px 0 0px white;
 }
+.logOut {
+  position: absolute;
+  bottom: 40px;
+}
