--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,5 +17,5 @@
     <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']">Contact Us</a>
     </li>
   </ul>
-  <a [routerLink]="['/']" class=""><button class="btn btn-warning mt-5 mx-4" (click)="onLogout()">Log Out <i class="bi bi-box-arrow-right"></i></button></a>
+  <a [routerLink]="['/']" class="logOut"><button class="btn btn-warning mt-5 mx-4" (click)="onLogout()">Log Out <i class="bi bi-box-arrow-right"></i></button></a>
 </div>
