--- a/src/app/trial/trial01/trial01.component.html
+++ b/src/app/trial/trial01/trial01.component.html
@@ -6,12 +6,13 @@
     <div class="form-group row">
       <label for="inputName" class="col-sm-2 col-form-label">Full Name</label>
       <div class="col-sm-6">
-          <input type="text" class="form-control" id="inputName" formControlName="feName" placeholder="Please Enter Full Name">
+        <input type="text" class="form-control" id="inputName" formControlName="feName"
+          placeholder="Please Enter Full Name">
       </div>
     </div>
 
     <div class="form-group row mt-3">
-      <label for="inputEmail3" class="col-sm-2 col-form-label" >Email</label>
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
       <div class="col-sm-6">
         <input type="email" class="form-control" id="inputEmail3" formControlName="feEmail" placeholder="Email Adrress">
       </div>
@@ -30,7 +31,8 @@
         <legend class="col-form-label col-sm-2 pt-0">Type of Feedback</legend>
         <div class="col-sm-6">
           <div class="form-check">
-            <input class="form-check-input" type="radio" id="gridRadios1" formControlName="feTypeOf" value="suggestion" checked>
+            <input class="form-check-input" type="radio" id="gridRadios1" formControlName="feTypeOf" value="suggestion"
+              checked>
             <label class="form-check-label" for="gridRadios1">Suggestion</label>
           </div>
           <div class="form-check">
