--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,21 +1,46 @@
 .row {
-    background-color: rgb(33, 37, 41);
+  background-color: rgb(33, 37, 41);
 }
+
 .row img {
-    margin: 0px;
-    padding: 0px;
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    mix-blend-mode: multiply;
+  margin: 0px;
+  padding: 0px;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  mix-blend-mode: multiply;
 }
+
 .login {
-    border: 1px solid rgb(32, 36, 40, 0.5);
-    border-radius: 20px;
-    padding: 45px;
-    box-shadow: -2px -2px 8px rgba(10, 10, 10, 0.15),
-                -2px -2px 12px rgba(32, 36, 40, 0.15),
-                inset 2px 2px 4px rgba(60, 60, 60, 0.6),
-                2px 2px 8px rgba(80, 80, 90, 0.5);
+  border: 1px solid rgb(32, 36, 40, 0.5);
+  border-radius: 20px;
+  padding: 45px;
+  box-shadow: -2px -2px 8px rgba(10, 10, 10, 0.15),
+    -2px -2px 12px rgba(32, 36, 40, 0.15),
+    inset 2px 2px 4px rgba(60, 60, 60, 0.6),
+    2px 2px 8px rgba(80, 80, 90, 0.5);
+}
+
+.logo {
+  position: absolute;
+  top: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+  // border: 5px solid white;
+  width: 30%;
+  height: 70px;
+  // justify-content: center;
+  // align-items: center; 
+  margin: auto;
+}
+
+
+.logo img {
+  position: relative;
+  width: 100%;
+  height: auto;
+  filter: invert(1);
+  align-content: center;
+  z-index: +1000;
 }
