--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -32,6 +32,7 @@
         background-color: white;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
+        border-left: 5px solid #ffc107;
       }
     }
 
@@ -40,6 +41,7 @@
     &.active:not(last-child) {
       background: #4269a8;
       border-left: 4px solid #ff0000;
+      
     }
   }
 
@@ -62,6 +64,7 @@
   position: relative;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  border-left: 5px solid #ffc107
 }
 
 
