--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,10 @@
 <nav class="navbar fixed-top navbar-dark bg-dark ml-200 p-0" style="z-index: 10;">
   <div class="container-fluid ">
-    <!-- <div class="navbar-brand">Infinite...</div> -->
-    <!-- <ul class="nav">
-      <li class="nav-item"><a [routerLink]="['/']" routerLinkActive="active" class="nav-link text-light active">Home</a></li>
-      <li class="nav-item"><a [routerLink]="['/item']" routerLinkActive="active" class="nav-link text-light">Item</a></li>
-      <li class="nav-item"><a [routerLink]="['/product']" routerLinkActive="active" class="nav-link text-light">Product</a></li>
-      <li class="nav-item"><a [routerLink]="['/trial']" routerLinkActive="active" class="nav-link text-light">Trial</a></li>
-    </ul> -->
-    <!-- <a [routerLink]="['/contact']" ><div class="btn btn-outline-light">Contact</div></a> -->
+
+    <div class="nav">
+
+    </div>
+    <div class="btn btn-outline-light my-2" ><i class="bi bi-person"style="margin-right:10px"> </i>{{userDetail.name}}</div>
   </div>
 </nav>
+
