--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-sidebar *ngIf="isDisplay"></app-sidebar>
-<app-header></app-header>
+<app-header *ngIf="isDisplay"></app-header>
 <router-outlet></router-outlet>
