--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -65,31 +65,36 @@
   <div class="card mx-4 mt-4 pb-4">
     <div class="row g-0 justify-content-between">
       <h5 class="mt-4 mb-4 mx-1 col-2 lh-base">Client List:</h5>
-      <input class="col-sm-2 m-auto p-2 rounded-3" style="height: 40px;" type="text" placeholder="Kuch likh to sahi..." [(ngModel)]="ungli" (ngModelChange)= "findBhidu()"> 
-      <button class="btn btn-dark col-2 mx-3" (click)="addBhidu()">Gang Me Samil Kar <i class="bi bi-plus-circle"></i></button>
+      <input class="col-sm-2 m-auto p-2 rounded-3" style="height: 40px;" type="text" placeholder="Kuch likh to sahi..."
+        [(ngModel)]="ungli" (ngModelChange)="findBhidu()">
+      <button class="btn btn-dark col-2 mx-3" (click)="addBhidu()">Gang Me Samil Kar <i
+          class="bi bi-plus-circle"></i></button>
     </div>
-    <table class="table table-hover container text-capitalize">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Thikana</th>
-          <th scope="col">Dhandha</th>
-          <th scope="col">Owner</th>
-          <th scope="col">Status</th>
-          <th scope="col" class="text-center">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of clients">
-          <td>{{item.name}}</td>
-          <td>{{item.thikana}}</td>
-          <td>{{item.dhandha}}</td>
-          <td>{{item.owner}}</td>
-          <td>{{item.status}}</td>
-          <td class="text-center" ><i class="bi bi-scissors" style="cursor: pointer;" (click)="katDal(item.id)"></i></td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="scroll-table">
+      <table class="table table-hover container text-capitalize">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Thikana</th>
+            <th scope="col">Dhandha</th>
+            <th scope="col">Owner</th>
+            <th scope="col">Status</th>
+            <th scope="col" class="text-center">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of clients">
+            <td>{{item.name}}</td>
+            <td>{{item.thikana}}</td>
+            <td>{{item.dhandha}}</td>
+            <td>{{item.owner}}</td>
+            <td>{{item.status}}</td>
+            <td class="text-center"><i class="bi bi-scissors" style="cursor: pointer;" (click)="katDal(item.id)"></i>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
@@ -128,30 +133,35 @@
   </div>
 </form> -->
 
-<form style="width: 40%;" class="form mx-4 mt-0" [formGroup]="newClients" (ngSubmit)="newClientsAdd()" *ngIf="buttonPressed">
+<form style="width: 40%;" class="form mx-4 mt-0" [formGroup]="newClients" (ngSubmit)="newClientsAdd()"
+  *ngIf="buttonPressed">
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button class="btn btn-warning" (click)="buttonPressed=false"><i class="bi bi-x-lg"></i></button>
   </div>
   <h4 class="mb-4 text-dark col">Apni Detail Dal Varna Kat Dalunga:</h4>
 
   <div class="form-floating mb-3">
-    <input type="text" class="form-control text-capitalize" id="floatingName" formControlName="name" placeholder="Chal Be Name likh" >
+    <input type="text" class="form-control text-capitalize" id="floatingName" formControlName="name"
+      placeholder="Chal Be Name likh">
     <label for="floatingName">Name Bata Bhidu</label>
   </div>
   <div class="form-floating mb-3">
-    <input type="text" class="form-control text-capitalize" id="floatingThikana" formControlName="thikana" placeholder="Kholi Kaha He" >
+    <input type="text" class="form-control text-capitalize" id="floatingThikana" formControlName="thikana"
+      placeholder="Kholi Kaha He">
     <label for="floatingThikana">Kahase Ho</label>
   </div>
   <div class="form-floating mb-3">
-    <input type="text" class="form-control text-capitalize" id="floatingDhandha" formControlName="dhandha" placeholder="Kam Kya Karta He Be" >
+    <input type="text" class="form-control text-capitalize" id="floatingDhandha" formControlName="dhandha"
+      placeholder="Kam Kya Karta He Be">
     <label for="floatingDhandha">Dhandha Bata</label>
   </div>
   <div class="form-floating mb-3">
-    <input type="text" class="form-control text-capitalize" id="floatingOwner" formControlName="owner" placeholder="Kiska Kutta He" >
+    <input type="text" class="form-control text-capitalize" id="floatingOwner" formControlName="owner"
+      placeholder="Kiska Kutta He">
     <label for="floatingOwner">Apne Baap Ka Name Likh</label>
   </div>
   <div class="form-floating mb-3">
-    <select class="form-select form-select mb-3" formControlName="status" id="floatingStatus" >
+    <select class="form-select form-select mb-3" formControlName="status" id="floatingStatus">
       <option value="Jinda">Jinda</option>
       <option value="Murda">Murda</option>
     </select>
