--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -15,3 +15,7 @@
     box-shadow: 0px 25px 45px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(3px);
 }
+.scroll-table{
+    height: 400px;
+    overflow-y: scroll;
+}
