user display fine tune

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar fixed-top navbar-dark bg-dark ml-200 p-0" style="z-index: 10;">
-  <div class="container-fluid ">
+<nav class="navbar fixed-top ml-200 p-0" style="z-index: 10;">
+  <div class="container-fluid">
 
     <div class="nav">
 
     </div>
-    <div class="btn btn-outline-light my-2" ><i class="bi bi-person"style="margin-right:10px"> </i>{{userDetail.name}}</div>
+    <div class="my-2 border-0 mx-5" ><i class="bi bi-person mx-2"> </i>{{userDetail.name}}</div>
   </div>
 </nav>
 
