--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -72,9 +72,9 @@
     </div>
     <div class="scroll-table">
       <table class="table table-hover container text-capitalize">
-        <thead class="thead-dark">
+        <thead class="thead-dark position-sticky">
           <tr>
-            <th scope="col">Name</th>
+            <th scope="col"> <div class="position-sticky">Name</div> </th>
             <th scope="col">Thikana</th>
             <th scope="col">Dhandha</th>
             <th scope="col">Owner</th>
