--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -19,3 +19,12 @@
     height: 400px;
     overflow-y: scroll;
 }
+table {
+    position: relative;
+    // border-collapse: separate;
+}
+th {
+    background-color: white;
+    position: sticky;
+    top: 0px;
+}
