--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -1,3 +1,7 @@
 <div class="main-content-box">
-  
+    <div class="map-container">
+        <div class="map-frame">
+          <div id="map"></div>
+        </div>
+      </div>
 </div>
