--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,6 +1,6 @@
 <div class="main-content-box">
   <div class="container">
-    <button (click)="getReport()">Click</button>
+    <!-- <button (click)="getReport()">Click</button> -->
     <div>
       <table class="table table-borderless mt-3">
         <thead>
