--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -11,9 +11,9 @@
     <li class="nav-item"><a class="nav-link" [routerLink]="['/item']" [routerLinkActive]="['active']">Item</a></li>
     <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">Dashbord</a>
     </li>
-    <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" [routerLinkActive]="['active']">Find</a></li>
-    <li class="nav-item"><a class="nav-link" [routerLink]="['/report']" [routerLinkActive]="['active']">Report</a></li>
     <li class="nav-item"><a class="nav-link" [routerLink]="['/trial']" [routerLinkActive]="['active']">Trial</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/report']" [routerLinkActive]="['active']">Report</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" [routerLinkActive]="['active']">Find Us</a></li>
     <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']">Contact Us</a>
     </li>
   </ul>
