--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -69,7 +69,7 @@
       </select>
     </div>
     <div class="container" id="chart" *ngIf="chartType=='pie'">
-      <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [labels]="chartOptions.labels"
+      <apx-chart [series]="chartOptions.series[0].data" [chart]="chartOptions.chart" [labels]="chartOptions.labels"
         [responsive]="chartOptions.responsive"></apx-chart>
     </div>
     <div class="container" *ngIf="chartType=='bar'">
