--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="main-content-box">
   <div class="container mt-4">
-    <h2>Welcome to the world of new opportunity..</h2>
-    <div class="card">
+    <h2 class="mx-2">Welcome to the world of new opportunity..</h2>
+    <div class="card br10 cardCol">
       <div class="card-body">
 
         <div class="row">
