--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,7 +3,7 @@
     <h2>Someone's Dream</h2>
   </div>
   <div class="row gx-0 mt-4">
-    <div class="card col ms-3 bg-light">
+    <div class="card col ms-3 cardCol">
       <div class="img-container">
         <img class="rounded mx-auto d-block" src="../../assets/images/img2.png" alt="tesla">
       </div>
@@ -12,7 +12,7 @@
         <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ea Lorem ipsum dolor sit amet.</div>
       </div>
     </div>
-    <div class="card col ms-3 bg-light">
+    <div class="card col ms-3 cardCol">
       <div class="img-container">
         <img class="rounded mx-auto d-block" src="../../assets/images/img3.png" alt="tesla">
       </div>
@@ -21,7 +21,7 @@
         <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ea Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt reiciendis vel maiores!</div>
       </div>
     </div>
-    <div class="card col ms-3 bg-light">
+    <div class="card col ms-3 cardCol">
       <div class="img-container">
         <img class="rounded mx-auto d-block" src="../../assets/images/img7.jpg" alt="tesla">
       </div>
@@ -30,7 +30,7 @@
         <div class="card-body">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. adipisicing elit. Hic, ea.</div>
       </div>
     </div>
-    <div class="card col mx-3 bg-light">
+    <div class="card col mx-3 cardCol">
       <div class="img-container">
         <img class="rounded mx-auto d-block" src="../../assets/images/img6.jpg" alt="tesla">
       </div>
