--- a/src/app/trial/trial01/trial01.component.html
+++ b/src/app/trial/trial01/trial01.component.html
@@ -1,4 +1,4 @@
-<div class="container-sm mt-5 ml-5">
+<div class="container-sm mt-3 p-4 cardCol">
   <form [formGroup]="feedback" (ngSubmit)="feebackLoged()">
 
     <h5 class="mb-4 text-dark">Feedback is the most effective tool of <strong><em>Improvement</em></strong>.</h5>
