--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="main-content-box">
     <div class="container contact">
-      <div class="row">
+      <div class="row cardCol">
         <div class="col-md-3 ">
           <div class="contact-info text-light">
             <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image" />
@@ -8,7 +8,7 @@
             <h4>We would love to hear from you !</h4>
           </div>
         </div>
-        <div class="col-md-9 border border-dark">
+        <div class="col-md-9">
           <div class="contact-form">
             <div class="form-group">
               <label class="control-label col-sm-2" for="fname">First Name:</label>
