--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,15 +1,13 @@
-body{
-    background-color: #25274d;
-}
+
 .contact{
     padding: 4%;
     height: 400px;
 }
 .col-md-3{
-    background: #212529;
+    background: #4d4e6d;
     padding: 4%;
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 }
 .contact-info{
     margin-top:10%;
@@ -21,10 +19,10 @@ body{
     margin-bottom: 10%;
 }
 .col-md-9{
-    background: #fff;
+    background: #b3b3c0;
     padding: 3%;
-    border-top-right-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 .contact-form label{
     font-weight:600;
