--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="main-content-box">
   <div class="container-sm mt-4">
     <h2 class="mb-3">Dashboard....</h2>
-    <div class="card">
+    <div class="card cardCol">
       <div class="card-body rounded" style="height: 550px;">
         <div class="row m-4 mt-5">
-          <div class="col ">
-            <div class="card  text-white bg-dark">
+          <div class="col">
+            <div class="card  text-white cardColSm">
               <div class="card-header">Social Media</div>
-              <div class="card-body cardbodycolor">
+              <div class="card-body cardbodycolor br1">
                 <ul class="mt-2">
                   <li>Instagram</li>
                   <li>Whatsapp</li>
@@ -18,9 +18,9 @@
             </div>
           </div>
           <div class="col">
-            <div class="card text-white bg-dark">
+            <div class="card text-white cardColSm">
               <div class="card-header">Application</div>
-              <div class="card-body cardbodycolor">
+              <div class="card-body cardbodycolor br1">
                 <ul class="mt-2">
                   <li>Id</li>
                   <li>Password</li>
@@ -33,9 +33,9 @@
         </div>
         <div class="row m-4">
           <div class="col">
-            <div class="card text-white bg-dark">
+            <div class="card text-white cardColSm">
               <div class="card-header">Third 6 Hours</div>
-              <div class="card-body cardbodycolor">
+              <div class="card-body cardbodycolor br1">
                 Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Quam dolor quidem
                 minima
@@ -49,9 +49,9 @@
             </div>
           </div>
           <div class="col">
-            <div class="card text-white bg-dark">
+            <div class="card text-white cardColSm">
               <div class="card-header">Fourth 6 Hours</div>
-              <div class="card-body cardbodycolor">
+              <div class="card-body cardbodycolor br1">
                 Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Quam dolor quidem
                 minima
