--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -62,7 +62,7 @@
 
   </div>
 
-  <div class="card mx-4 mt-4 pb-4">
+  <div class="card mx-4 mt-4 p-3 cardCol">
     <div class="row g-0 justify-content-between">
       <h5 class="mt-4 mb-4 mx-1 col-2 lh-base">Client List:</h5>
       <input class="col-sm-2 m-auto p-2 rounded-3" style="height: 40px;" type="text" placeholder="Kuch likh to sahi..."
