--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -24,7 +24,7 @@ table {
     // border-collapse: separate;
 }
 th {
-    background-color: white;
+    background-color: #808197;
     position: sticky;
     top: 0px;
 }
