--- a/src/app/trial/trial.component.html
+++ b/src/app/trial/trial.component.html
@@ -1,23 +1,29 @@
 <div class="main-content-box">
-  <div class="row mb-3 gx-0">
-    <div class="col-sm-3 px-3"><strong>Feedback Management</strong></div> 
-    <div class="col-sm-3">Total Feedback: <strong> {{totalFeedback}}</strong></div>
-    <div class="col-sm-3">Total Resolved: <strong> {{totalSolved}}</strong></div>
-  </div>
-  
-  <div>
-    <tabset>
-      <tab heading="Feedback" id="tab1">
-        <app-trial01 (sendFeedbackList)="receiveFeedbackList($event)"></app-trial01>
-      </tab>
+  <div class="container">
 
-      <tab heading="Action" (selectTab)="filterList($event)">
-        <app-trial02 [childFeebackList]="feedbackList" (sendChildFeebackList)="receiveNewFeedbackList($event)" ></app-trial02>
-      </tab>
-      
-      <tab heading="Status" (selectTab)="changeTab($event)">
-        <app-trial03 [finalFeebackList]="newFeedbackList" (sendFinalFeebackList)="receiveFinalFeedbackList($event)"></app-trial03>
-      </tab>
-    </tabset>
+
+    <div class="row mb-3 gx-0">
+      <div class="col-sm-3 px-3"><strong>Feedback Management</strong></div>
+      <div class="col-sm-3">Total Feedback: <strong> {{totalFeedback}}</strong></div>
+      <div class="col-sm-3">Total Resolved: <strong> {{totalSolved}}</strong></div>
+    </div>
+
+    <div>
+      <tabset>
+        <tab heading="Feedback" id="tab1">
+          <app-trial01 (sendFeedbackList)="receiveFeedbackList($event)"></app-trial01>
+        </tab>
+
+        <tab heading="Action" (selectTab)="filterList($event)">
+          <app-trial02 [childFeebackList]="feedbackList" (sendChildFeebackList)="receiveNewFeedbackList($event)">
+          </app-trial02>
+        </tab>
+
+        <tab heading="Status" (selectTab)="changeTab($event)">
+          <app-trial03 [finalFeebackList]="newFeedbackList" (sendFinalFeebackList)="receiveFinalFeedbackList($event)">
+          </app-trial03>
+        </tab>
+      </tabset>
+    </div>
   </div>
 </div>
